Fetch JSON, parse response and display it in tableView.

--- a/NetworkingApp/Base.lproj/Main.storyboard
+++ b/NetworkingApp/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NetworkingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,74 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DGe-ZG-phf">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userCell" rowHeight="100" id="fOJ-Dl-0aF" customClass="UserTableViewCell" customModule="NetworkingApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fOJ-Dl-0aF" id="d5H-4T-eYA">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kyy-0X-cR3">
+                                                    <rect key="frame" x="28" y="8" width="45" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUf-hf-bWf">
+                                                    <rect key="frame" x="28" y="36" width="40.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z8-4z-2yC">
+                                                    <rect key="frame" x="28" y="64" width="49" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kyy-0X-cR3" firstAttribute="leading" secondItem="d5H-4T-eYA" secondAttribute="leadingMargin" constant="20" id="8mG-se-2N8"/>
+                                                <constraint firstItem="lUf-hf-bWf" firstAttribute="leading" secondItem="Kyy-0X-cR3" secondAttribute="leading" id="Bcf-lw-yPN"/>
+                                                <constraint firstItem="Kyy-0X-cR3" firstAttribute="top" secondItem="d5H-4T-eYA" secondAttribute="topMargin" id="Upe-qS-Ggn"/>
+                                                <constraint firstItem="lUf-hf-bWf" firstAttribute="top" secondItem="Kyy-0X-cR3" secondAttribute="bottom" constant="8" id="YVf-QM-SLp"/>
+                                                <constraint firstItem="6Z8-4z-2yC" firstAttribute="top" secondItem="lUf-hf-bWf" secondAttribute="bottom" constant="8" id="gi4-WJ-w50"/>
+                                                <constraint firstItem="6Z8-4z-2yC" firstAttribute="leading" secondItem="lUf-hf-bWf" secondAttribute="leading" id="hba-Ro-HI7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="emailLabel" destination="lUf-hf-bWf" id="Et9-eR-4T7"/>
+                                            <outlet property="nameLabel" destination="Kyy-0X-cR3" id="zL8-2M-NeG"/>
+                                            <outlet property="phoneLabel" destination="6Z8-4z-2yC" id="5fR-ch-SzO"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ujP-6M-gLR"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="img-I4-fI9"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="DGe-ZG-phf" secondAttribute="trailingMargin" constant="-5" id="Oyc-wz-8lN"/>
+                            <constraint firstItem="DGe-ZG-phf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SQh-Dz-Ha7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DGe-ZG-phf" secondAttribute="bottom" id="lfh-z4-ef0"/>
+                            <constraint firstItem="DGe-ZG-phf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xdO-PP-Jf0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="DGe-ZG-phf" id="ojV-dK-wr1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
 </document>
